--- a/app/templates/qr_code_login.html
+++ b/app/templates/qr_code_login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Login</title>
-    <link rel="stylesheet" href="{% static 'css/customer_login/styles.css' %}">
+    <title>QR Code Login</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header text-center">
-                        <h3>Customer Login</h3>
+                        <h3>QR Code Login</h3>
                     </div>
                     <div class="card-body">
                         <form method="POST" action="{% url 'qr_code_login' %}">
